--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,26 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+  padding: 30px;
+}
+
+.container-fluid {
+  padding: 10px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+
+.padding(@value) {
+  .padding-@{value} {
+    padding: @value;
+  }
+}
+
+.padding(10px);
+.padding(20px);
+.padding(30px);
