Summary componennt completed.

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,13 +1,74 @@
 <div class="container">
-  <mat-card class="">
-    <mat-card-title>
-      Summary
-    </mat-card-title>
+  <mat-card>
+    <mat-card-header>
+  <img mat-card-avatar class="rounded-circle" src="../../assets/images/profile.png" alt="profile">
+      <mat-card-title>
+        Tom Alderman
+      </mat-card-title>
+      <mat-card-subtitle>
+        Senior Software Developer
+      </mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cras sed felis eget velit aliquet sagittis id consectetur. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae. Id diam maecenas ultricies mi eget mauris pharetra et ultrices. In mollis nunc sed id semper risus in hendrerit gravida. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Donec et odio pellentesque diam volutpat commodo sed. Blandit libero volutpat sed cras ornare arcu dui. Nunc mi ipsum faucibus vitae aliquet nec. Pharetra diam sit amet nisl suscipit. Pellentesque eu tincidunt tortor aliquam nulla facilisi. Nunc aliquet bibendum enim facilisis gravida neque convallis. Neque convallis a cras semper auctor neque. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Cras sed felis eget velit aliquet sagittis id consectetur. Et magnis dis parturient montes nascetur
+      ridiculus mus mauris vitae. Id diam maecenas ultricies mi eget mauris pharetra et ultrices. In mollis nunc sed id
+      semper risus in hendrerit gravida. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Donec et odio
+      pellentesque diam volutpat commodo sed. Blandit libero volutpat sed cras ornare arcu dui. Nunc mi ipsum faucibus
+      vitae aliquet nec. Pharetra diam sit amet nisl suscipit. Pellentesque eu tincidunt tortor aliquam nulla facilisi.
+      Nunc aliquet bibendum enim facilisis gravida neque convallis. Neque convallis a cras semper auctor neque. Potenti
+      nullam ac tortor vitae purus faucibus ornare suspendisse sed.
 
-      Etiam dignissim diam quis enim lobortis. Est velit egestas dui id ornare arcu odio ut. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Quam quisque id diam vel. Pulvinar pellentesque habitant morbi tristique senectus et. Iaculis urna id volutpat lacus laoreet non curabitur gravida. Cursus eget nunc scelerisque viverra. Cursus vitae congue mauris rhoncus aenean vel. Fermentum posuere urna nec tincidunt. Nibh praesent tristique magna sit amet purus gravida quis. Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Sed turpis tincidunt id aliquet risus feugiat in.
+      Etiam dignissim diam quis enim lobortis. Est velit egestas dui id ornare arcu odio ut. Sed cras ornare arcu dui
+      vivamus arcu felis bibendum ut. Quam quisque id diam vel. Pulvinar pellentesque habitant morbi tristique senectus
+      et. Iaculis urna id volutpat lacus laoreet non curabitur gravida. Cursus eget nunc scelerisque viverra. Cursus
+      vitae congue mauris rhoncus aenean vel. Fermentum posuere urna nec tincidunt. Nibh praesent tristique magna sit
+      amet purus gravida quis. Ut placerat orci nulla pellentesque dignissim enim sit amet venenatis. Sed turpis
+      tincidunt id aliquet risus feugiat in.
     </mat-card-content>
+    <mat-card-actions>
+      <button type="button" title="Phone" mat-icon-button href="tel: +18483244555">
+        <fa-icon [icon]="faPhone"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px', 'social-icon']">
+        </fa-icon>
+      </button>
+      <button type="button" title="Email" mat-icon-button href="mailto: example@example.com">
+        <fa-icon [icon]="faEnvelope"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+      <button type="button" title="LinkedIn" mat-icon-button href="#">
+        <fa-icon [icon]="faLinkedin"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+      <button type="button" title="YouTube" mat-icon-button href="#">
+        <fa-icon [icon]="faYouTube"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+      <button type="button" title="Dribble" mat-icon-button href="#">
+        <fa-icon [icon]="faDribble"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+      <button type="button" title="Pinterest" mat-icon-button href="#">
+        <fa-icon [icon]="faPinterest"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+      <button type="button" title="Github" mat-icon-button href="#">
+        <fa-icon [icon]="faGithub"
+                 [border]="true"
+                 [classes]="['rounded-circle', 'padding-10px']">
+        </fa-icon>
+      </button>
+    </mat-card-actions>
   </mat-card>
 </div>
-
