--- a/src/styles.less
+++ b/src/styles.less
@@ -25,3 +25,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .padding(10px);
 .padding(20px);
 .padding(30px);
+
+
+.text-center {
+  text-align: center !important;
+}
+
+.rounded {
+  border-radius: 10px;
+}
+
+.rounded-circle {
+  border-radius: 100%;
+}
+
+img.rounded-circle {
+  .rounded-circle();
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+}
