--- a/src/app/work-experiences/work-experiences.component.html
+++ b/src/app/work-experiences/work-experiences.component.html
@@ -1,1 +1,45 @@
-<p>work-experiences works!</p>
+<div class="container">
+  <div *ngIf="workExperiences">
+    <mat-grid-list gutterSize="50" cols="2" rowHeight="340px">
+      <mat-grid-tile class="container-fluid" *ngFor="let workExperience of workExperiences">
+        <mat-card id="experience_{{workExperience.id}}" class="full-width">
+          <mat-card-header>
+            <mat-card-title>{{ workExperience.title }}</mat-card-title>
+            <mat-card-subtitle> {{ workExperience.company }} </mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <div class="overflow">
+              <div class="card-content" [innerHtml]="workExperience.description">
+              </div>
+            </div>
+          </mat-card-content>
+          <mat-card-footer>
+            <div class="container-fluid">
+              <span class="mat-body-strong">
+                {{workExperience.startDateTime.getFullYear()}}/{{ workExperience.startDateTime.getMonth() }}
+              </span>
+              &nbsp;
+              <span class="mat-body-strong">-</span>
+              &nbsp;
+              <span class="mat-body-strong" *ngIf="workExperience.endDateTime">
+                {{ workExperience.endDateTime.getFullYear() }}/{{ workExperience.endDateTime.getMonth() }}
+              </span>
+              <span class="mat-body-strong" *ngIf="!workExperience.endDateTime">
+                Present
+              </span>
+            </div>
+          </mat-card-footer>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+
+
+  <mat-card *ngIf="!workExperiences">
+    <mat-card-content>
+      <h2>
+        Nothing to show...
+      </h2>
+    </mat-card-content>
+  </mat-card>
+</div>
