Education component finished.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,12 @@
           &nbsp;
           Work Experiences
         </a>
+        <a mat-list-item routerLink="/education">
+          <fa-icon [icon]="faGraduationCap">
+          </fa-icon>
+          &nbsp;
+          Education
+        </a>
       </mat-nav-list>
     </mat-sidenav>
 
