Volunteer Experiences component added and finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,12 @@
           &nbsp;
           Education
         </a>
+        <a mat-list-item routerLink="/volunteer-experiences">
+          <fa-icon [icon]="faHandshakeAngle">
+          </fa-icon>
+          &nbsp;
+          Volunteer Experiences
+        </a>
       </mat-nav-list>
     </mat-sidenav>
 
