Certificates component finished.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,12 @@
           &nbsp;
           Volunteer Experiences
         </a>
+        <a mat-list-item routerLink="/certificates">
+          <fa-icon [icon]="faCertificate">
+          </fa-icon>
+          &nbsp;
+          Certificates
+        </a>
       </mat-nav-list>
     </mat-sidenav>
 
