--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,12 @@
           &nbsp;
           Certificates
         </a>
+        <a mat-list-item routerLink="/portfolio">
+          <fa-icon [icon]="faBorderNone">
+          </fa-icon>
+          &nbsp;
+          Portfolio
+        </a>
       </mat-nav-list>
     </mat-sidenav>
 
