--- a/src/styles.less
+++ b/src/styles.less
@@ -22,6 +22,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 }
 
+.padding(5px);
 .padding(10px);
 .padding(20px);
 .padding(30px);
