--- a/src/app/components/work-experiences/work-experiences.component.html
+++ b/src/app/components/work-experiences/work-experiences.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   <div *ngIf="workExperiences">
-    <mat-grid-list gutterSize="50" cols="2" rowHeight="340px">
+    <mat-grid-list gutterSize="50" cols="2" rowHeight="360px">
       <mat-grid-tile class="container-fluid" *ngFor="let workExperience of workExperiences">
         <mat-card id="experience_{{workExperience.id}}" class="full-width">
           <mat-card-header>
             <mat-card-title>{{ workExperience.title }}</mat-card-title>
             <mat-card-subtitle> {{ workExperience.company }} </mat-card-subtitle>
           </mat-card-header>
-          <mat-card-content>
+          <mat-divider></mat-divider>
+          <mat-card-content class="padding-10px">
             <div class="overflow">
               <div class="card-content" [innerHtml]="workExperience.description">
               </div>
