--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container" [class.app-is-mobile]="mobileQuery.matches">
+<div class="app-container mat-app-background" [class.app-is-mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="app-toolbar">
     <button type="button" mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
@@ -6,6 +6,10 @@
     <h1 class="app-app-name">
       {{ title }}
     </h1>
+    <div class="flex-stretch"></div>
+    <mat-icon class="mr-8">brightness_5</mat-icon>
+    <mat-slide-toggle [formControl]="toggleControl" class="mr-8"></mat-slide-toggle>
+    <mat-icon>bedtime</mat-icon>
   </mat-toolbar>
 
   <mat-sidenav-container class="app-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
