--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container mat-app-background" [class.app-is-mobile]="mobileQuery.matches">
+<div class="app-container mat-app-background" [class.app-is-mobile]="isHandsetScreen">
   <mat-toolbar color="primary" class="app-toolbar">
     <button type="button" mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
@@ -12,9 +12,9 @@
     <mat-icon>bedtime</mat-icon>
   </mat-toolbar>
 
-  <mat-sidenav-container class="app-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
-      fixedTopGap="56" [opened]="!mobileQuery.matches">
+  <mat-sidenav-container class="app-sidenav-container" [style.marginTop.px]="isHandsetScreen ? 56 : 0">
+    <mat-sidenav #snav [mode]="isHandsetScreen ? 'over' : 'side'" [fixedInViewport]="isHandsetScreen"
+      fixedTopGap="56" [opened]="!isHandsetScreen">
       <mat-nav-list>
         <a mat-list-item routerLink="/summary">
           <fa-icon [icon]="faListUl">
